[build-system]
requires = ["setuptools>=61.0", "numpy==1.24.3"]
build-backend = "setuptools.build_meta"
[project]
name = "libhackrf"
version = "0.1.0"
description = "Python bindings for libhackrf"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Topic :: Communications :: Ham Radio",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]